--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vr-ui",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://diingdesign.github.io/vr-ui",
+  "homepage": "https://diingdesign.github.io/vr-ui",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
