--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-input-switch": "^2.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-tooltip": "^4.2.1"
